# floodgate

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
k8s/: configmap.yaml  deployment.yaml  service.yaml
proto/emqx/: exhook.proto
protobufs/: README.md
scripts/: download_protobufs.sh  generate_protos.sh
src/floodgate/: __init__.py  __main__.py  antiflood.py  config.py  exhook_server.py  health.py  log_setup.py  zerohop.py
tests/: conftest.py  test_antiflood.py  test_config.py  test_container_smoke.py  test_health.py  test_log_setup.py  test_zerohop.py
